--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^4.0.0",
     "@astrojs/vue": "^2.2.1",
+    "@popperjs/core": "^2.11.8",
     "astro": "^2.9.6",
-    "pdfjs-dist": "^3.9.179"
+    "flowbite": "^1.8.0",
+    "pdfjs-dist": "^3.9.179",
+    "tailwindcss": "^3.3.3"
   }
 }
