--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/vue": "^2.2.1",
     "@popperjs/core": "^2.11.8",
     "astro": "^2.9.6",
+    "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
     "flowbite": "^1.8.0",
     "pdfjs-dist": "^3.9.179",
     "tailwindcss": "^3.3.3"
