--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@astrojs/tailwind": "^4.0.0",
     "@astrojs/vue": "^2.2.1",
+    "@nanostores/persistent": "^0.9.1",
+    "@nanostores/vue": "^0.10.0",
     "@popperjs/core": "^2.11.8",
     "astro": "^2.9.6",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
     "flowbite": "^1.8.0",
+    "nanostores": "^0.9.3",
     "pdfjs-dist": "^3.9.179",
     "tailwindcss": "^3.3.3"
   }
