--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flowbite": "^1.8.0",
     "nanostores": "^0.9.3",
     "pdfjs-dist": "^3.9.179",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "vuex": "^4.1.0"
   }
 }
